--- a/Project-01/style.css
+++ b/Project-01/style.css
@@ -1,28 +1,59 @@
 .top-section{
-    text-align: center;
-    width: 40%;
-    margin-left: 30%;
-    margin-bottom: 20px;
+position: absolute;
+width: 610px;
+height: 301px;
+top: 64px;
+left: 415px;
+text-align: center;
+}
+h1{
+    width: 610px;
+    height: 145px;
+    font-family: Avenir;
+    font-weight: 800;
+    font-style: Heavy;
+    font-size: 64px;
+    line-height: 80px;
+    letter-spacing: 0%;
+}
+p{
+    width: 607px;
+    height: 54px;
+    opacity: 1;
+    font-family: Avenir;
+    font-weight: 400;
+    font-style: Roman;
+    font-size: 20px;
+
 }
 button{
-    color: white;
-    background-color: black;
-    width: 150px;
-    height: 50px;
+    width: 158px;
+    height: 54px;
+    opacity: 1;
     border-radius: 16px;
+    padding-top: 18px;
+    padding-right: 48px;
+    padding-bottom: 18px;
+    padding-left: 48px;
+    background: black;
+    color: white;
 }
 img {
-    margin: 5px;
     width:20%;
+    margin: 0 5px;
 }
-picture{
+
+.image-section{
+    position: absolute;
     width: 80%;
-    margin-left: 10%;
-    align-content: center;
-    padding: 0;
+    height: 592px;
+    opacity: 1;
+    top: 483px;
+    left: 50px;
+    gap: 16px;
 }
 div{
-    align-self: center;
-    margin-left: 10%;
-    width:80%;
+    width:100%;
+    margin-left:0;
+    margin 0 auto;
 }
