--- a/Project-05/style.css
+++ b/Project-05/style.css
@@ -6,6 +6,21 @@ h1{
     display: inline-block;
     width:30%;
 }
-.box p{
-    width:400px;
+p{
+    width: 400px;
+    height: 132px;
+    font-family: Avenir;
+    font-weight: 400;
+    font-style: Roman;
+    font-size: 24px;
+
+}
+.cap{
+    width: 38px;
+    height: 30px;
+    font-family: Avenir;
+    font-weight: 800;
+    font-style: Heavy;
+    font-size: 32px;
+    margin: 0;
 }
