--- a/project-02/style.css
+++ b/project-02/style.css
@@ -1,47 +1,81 @@
-.top-left {
-    width:444px;
-    height: 473px;
-    top:137px;
+.top-left{
+    position: absolute;
+    top: 137px;
     left: 64px;
-    display: inline-block;
-    gap:24px;
+}
+h1{
+    width: 444px;
+    height: 231px;
+    font-family: Avenir;
+    font-weight: 800;
+    font-style: Heavy;
+    font-size: 56px;
+    line-height: 80px;
+    letter-spacing: 0%;
+}
+p{
+    width: 386px;
+    height: 144px;
+    font-family: Avenir;
+    font-weight: 400;
+    font-style: Roman;
+    font-size: 26px;
+    line-height: 100%;
+    letter-spacing: 0%;
 }
 button{
-    color: white;
-    background-color: black;
-    width: 100px;
-    height: 40px;
+    position: absolute;
+    width: 157px;
+    height: 50px;
+    opacity: 1;
     border-radius: 16px;
+    padding-top: 16px;
+    padding-right: 32px;
+    padding-bottom: 16px;
+    padding-left: 32px;
+    color:white;
+    background-color:black;;
 }
-.top-left-img {
+.top-middle{
     position: absolute;
-    top:65;
-    left:525;
-    width:408;
-    height:480;
-    radius: 16px;
+    width: 408px;
+    height: 480px;
+    opacity: 1;
+    top: 65px;
+    left: 525px;
+    border-radius: 16px;
+
 }
-.top-right-img {
+.top-right{
     position: absolute;
-    top:217;
-    left:968;
-    width:408;
-    height:480;
-    radius: 16px;
+    width: 408px;
+    height: 480px;
+    opacity: 1;
+    top: 217px;
+    left: 968px;
+    border-radius: 16px;
+
 }
-.down-raw{
-    
-    justify-content: center;
-    align-items: center;
-}
-.im{
-    
-    margin: 10px;
-    display:inline-block;
-    border: black 2px solid;
+.bottom{
+    position: absolute;
+    width: 100%;
+    height: 440px;
+    top: 769px;
+    left: 64px;
+
+
 }
 .imd{
-    display:inline-block;
-    width: 200px;
-    height: 200px;
+    border-radius: 16px;
+    width:22%;
+    display: inline-block;
+}
+.cap{
+    height:60px;
+    font-family: Avenir;
+    font-weight: 800;
+    font-style: Heavy;
+    font-size: 40px;
+    letter-spacing: 0%;
+    margin:0;
 }
