--- a/project-04/style.css
+++ b/project-04/style.css
@@ -1,23 +1,56 @@
 img{
     position:absolute;
-    top:67px;
+    width: 716px;
+    height: 932px;
+    top: 67px;
+
 }
 .r-container{
     position:absolute;
-    top:2px;
-    left:716;
+    top: 2px;
+    left: 716px;
+    padding-top: 80px;
+    padding-right: 112px;
+    padding-bottom: 80px;
+    padding-left: 112px;
+
 }
 .r-top{
-    position:absolute;
-    top:0px;
-    border-bottom:1px solid #dcdcdc;
+    padding: 32px;
+}
+h1{
+    width: 500px;
+    height: 153px;
+    font-family: Avenir;
+    font-weight: 800;
+    font-style: Heavy;
+    font-size: 64px;
+    line-height: 80px;
+}
+p{
+    width: 500px;
+    height: 144px;
+    font-family: Avenir;
+    font-weight: 400;
+    font-style: Roman;
+    font-size: 26px;
+    line-height: 100%;
+}
+button{
+    width: 158px;
+    height: 54px;
+    border-radius: 16px;
+    padding-top: 18px;
+    padding-right: 48px;
+    padding-bottom: 18px;
+    padding-left: 48px;
+    color:white;
+    background-color:black;
 }
 .r-bottom{
-    position:absolute;
     top:67px;
     left:0px;
     width:100%;
     height:50px;
     background-color:#ffffff;
-    border-top:1px solid #dcdcdc;
-}   
+   }   
